tests/invalid/Parsing_Invalid_31.whiley
method m() :
    int b = 1

public export method test() :
    int a = m()
